--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
+    background-color: rgba(233, 233, 233, 0.52);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 .main-card{
     display: flex;
     margin:30px ;
@@ -12,13 +14,36 @@ body{
     width: 700px;
     height:420px;
     margin: 0 15px;
+    box-shadow: 2px 0 10px black;
 }
 .main-card-detials{
+    
     position: absolute;
     top: 0;
+    z-index: 1;
     color: white;
     margin-left: 40px;
     margin-top: 50px;
+}
+.bg{
+    background: linear-gradient(to right, rgba(18, 18, 18, 0.461) 30%, transparent);
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    top: 0;
+    left: 15px;
+    border-radius: 10px;
+    
+}
+.bg-1{
+    background: linear-gradient(to right, rgba(27, 27, 27, 0.621) 10%, transparent);
+    display: flex;
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    left: 745px;
+    border-radius: 11px;
+    
 }
 
 .item{
@@ -41,19 +66,28 @@ body{
 }
 
 /* small card box */
+.small-card:hover{
+transition: 200ms;
+    border: none;
+    box-shadow: 0px 0px 0px gray;
+
+}
 .small-card{
-    border: 1px solid lightgrey;
+    border: 2px solid rgb(214, 214, 214);
     width: 380px;
     height:190px;
     display: flex;
     border-radius: 6px;
     padding: 10px;
     position: relative;
+    box-shadow: 3px 3px 2px gray;
 }
 .small-card-img{
     width: 150px;
     height: 180px;
     border-radius: 8px;
+    box-shadow: 0px 1px 5px gray;
+
 }
 .container{
     display: flex;
@@ -88,22 +122,9 @@ body{
     border: 1px solid rgb(35, 35, 35);
     border-radius: 5px;
 }
-/* .time1{
-    border: 1px solid black;
-    padding-top:-2px;
-    display: inline;
-    border-radius: 7px;
-    box-sizing: border-box;
 
 
+::selection{
+    background-color: rgba(0, 0, 0, 0.387);
+    border-radius: 10px;
 }
-.time2{
-    border: 1px solid black;
-    background-color: white;
-    
-    border-radius: 7px;
-    box-sizing: border-box;
-
-
-
-} */
